--- a/django-models/relationship_app/templates/relationship_app/list_books.html
+++ b/django-models/relationship_app/templates/relationship_app/list_books.html
@@ -1,14 +1,14 @@
+<!-- list_books.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Library Detail</title>
+    <title>List of Books</title>
 </head>
 <body>
-    <h1>Library: {{ library.name }}</h1>
-    <h2>Books in Library:</h2>
+    <h1>Books Available:</h1>
     <ul>
-        {% for book in library.books.all %}
+        {% for book in books %}
         <li>{{ book.title }} by {{ book.author.name }}</li>
         {% endfor %}
     </ul>
