--- a/django_blog/blog/static/css/styles.css
+++ b/django_blog/blog/static/css/styles.css
@@ -1,41 +1,39 @@
-/* style.css */
+/* Basic reset */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
     background-color: #f9f9f9;
+    color: #333;
 }
 
 header {
     background-color: #333;
-    color: #fff;
-    padding: 10px 0;
+    padding: 10px;
     text-align: center;
 }
 
-nav ul {
-    list-style: none;
-    padding: 0;
+header nav ul {
+    list-style-type: none;
 }
 
-nav ul li {
+header nav ul li {
     display: inline;
-    margin-right: 10px;
+    margin: 0 15px;
 }
 
-nav ul li a {
-    color: #fff;
+header nav ul li a {
+    color: white;
     text-decoration: none;
+    font-size: 18px;
 }
 
 .content {
-    padding: 20px;
-}
-
-h1,
-h2 {
-    color: #333;
+    margin: 20px;
 }
 
 footer {
@@ -46,4 +44,5 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
+
 }
