--- a/django_blog/blog/templates/blog/base.html
+++ b/django_blog/blog/templates/blog/base.html
@@ -3,22 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}My Blog{% endblock %}</title>
+    <title>{% block title %}Django Blog{% endblock %}</title>
     
     <!-- Load static files -->
     {% load static %}
-    
-    <!-- Link to the CSS file in the static directory -->
-    <link rel="stylesheet" href="{% static 'blog/css/style.css' %}">
+
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
     <header>
-        <h1>My Django Blog</h1>
         <nav>
             <ul>
                 <li><a href="{% url 'home' %}">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="{% url 'posts' %}">Blog Posts</a></li>
+                <li><a href="{% url 'login' %}">Login</a></li>
+                <li><a href="{% url 'register' %}">Register</a></li>
             </ul>
         </nav>
     </header>
@@ -30,10 +29,10 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 My Blog</p>
+        <p>&copy; 2024 Django Blog</p>
     </footer>
 
-    <!-- Link to the JavaScript file in the static directory -->
-    <script src="{% static 'blog/js/script.js' %}"></script>
+    <script src="{% static 'js/scripts.js' %}"></script>
 </body>
 </html>
+
