Creating Blog Post Management Features

--- a/django_blog/blog/templates/blog/post_list.html
+++ b/django_blog/blog/templates/blog/post_list.html
@@ -1,17 +1,12 @@
 {% extends 'blog/base.html' %}
-
-{% block title %}Post List{% endblock %}
-
 {% block content %}
-    <h2>Blog Posts</h2>
+    <h2>All Blog Posts</h2>
     <ul>
-        {% for post in posts %}
-            <li>
-                <a href="#">{{ post.title }}</a>
-                <p>By {{ post.author }} | Published on {{ post.published_date }}</p>
-            </li>
-        {% empty %}
-            <li>No posts available.</li>
-        {% endfor %}
+    {% for post in posts %}
+        <li>
+            <a href="{% url 'post-detail' post.id %}">{{ post.title }}</a>
+            <p>{{ post.snippet }} - {{ post.author }}</p>
+        </li>
+    {% endfor %}
     </ul>
 {% endblock %}
