--- a/django_blog/blog/static/css/styles.css
+++ b/django_blog/blog/static/css/styles.css
@@ -72,3 +72,48 @@ footer {
     bottom: 0;
     width: 100%;
 }
+
+
+.home-page {
+    text-align: center;
+    padding: 20px;
+}
+
+.home-page h1 {
+    font-size: 36px;
+    margin-bottom: 20px;
+}
+
+.home-page ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.home-page ul li {
+    margin: 10px 0;
+}
+
+.home-page ul li a {
+    font-size: 24px;
+    color: #333;
+    text-decoration: none;
+}
+
+.home-page ul li p {
+    color: #666;
+    font-size: 16px;
+}
+
+.home-page a {
+    display: inline-block;
+    margin-top: 20px;
+    padding: 10px 15px;
+    background-color: #007bff;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.home-page a:hover {
+    background-color: #0056b3;
+}
