--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -3,4 +3,27 @@
     <h2>{{ post.title }}</h2>
     <p>{{ post.content }}</p>
     <p>By {{ post.author }} on {{ post.created_at }}</p>
+
+
+    <h2>Comments</h2>
+    <ul>
+        {% for comment in comments %}
+            <li>
+                <p>{{ comment.content }} - {{ comment.author }}</p>
+                {% if comment.author == user %}
+                    <a href="{% url 'comment_edit' comment.pk %}">Edit</a>
+                    <a href="{% url 'comment_delete' comment.pk %}">Delete</a>
+                {% endif %}
+            </li>
+        {% empty %}
+            <li>No comments yet.</li>
+        {% endfor %}
+    </ul>
+
+    <h2>Add a Comment</h2>
+    <form method="post" action="{% url 'comment_create' post.pk %}">
+        {% csrf_token %}
+        {{ comment_form.as_p }}
+        <button type="submit">Add Comment</button>
+    </form>
 {% endblock %}
