--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -4,7 +4,18 @@
     <p>{{ post.content }}</p>
     <p>By {{ post.author }} on {{ post.created_at }}</p>
 
+    <p>Tags: 
+        {% for tag in post.tags.all %}
+            <a href="{% url 'posts_by_tag' tag.name %}">{{ tag.name }}</a>
+        {% endfor %}
+    </p>
 
+    <!-- Search Bar -->
+    <form method="GET" action="{% url 'post_search' %}">
+        <input type="text" name="q" placeholder="Search...">
+        <button type="submit">Search</button>
+    </form>
+    
     <h2>Comments</h2>
     <ul>
         {% for comment in comments %}
