--- a/django_blog/blog/templates/blog/post_list.html
+++ b/django_blog/blog/templates/blog/post_list.html
@@ -1,11 +1,24 @@
 {% extends 'blog/base.html' %}
 {% block content %}
     <h2>All Blog Posts</h2>
+
+    <!-- Search bar -->
+    <form method="GET" action="{% url 'post_search' %}">
+        <input type="text" name="q" placeholder="Search...">
+        <button type="submit">Search</button>
+    </form>
+
     <ul>
     {% for post in posts %}
         <li>
             <a href="{% url 'post-detail' post.id %}">{{ post.title }}</a>
             <p>{{ post.snippet }} - {{ post.author }}</p>
+            <!-- Display tags -->
+            <p>Tags: 
+                {% for tag in post.tags.all %}
+                    <a href="{% url 'posts_by_tag' tag.name %}">{{ tag.name }}</a>
+                {% endfor %}
+            </p>
         </li>
     {% endfor %}
     </ul>
